[project]
name = "smart-toolbox"
version = "1.0.2"
description = "自媒体智能运营工具箱 - AI驱动的账号管理、内容创作和分发平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pymysql==1.1.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "celery==5.4.0",
    "redis==5.2.1",
    "playwright==1.49.1",
    "paddleocr==2.8.1",
    "paddlepaddle>=3.0.0",
    "openai==1.58.1",
    "python-dotenv==1.0.1",
    "loguru==0.7.3",
    "passlib==1.7.4",
    "bcrypt==4.2.1",
    "python-jose[cryptography]==3.3.0",
    "tenacity==9.0.0",
    "nest-asyncio==1.6.0",
]

[tool.pytest.ini_options]
# pytest 配置
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

# 标记配置
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]

# asyncio 配置
asyncio_mode = "auto"

# 日志配置
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 警告过滤
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
